--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-spinner></app-spinner>
 <div style="text-align:center">
   <h1>
-    This is supposed to be hidden by spinner.
+    This is supposed to be hidden or invisible spinner.
   </h1>
 </div>
 
